Add periodicSensor component to docs

--- a/mainpage.dox
+++ b/mainpage.dox
@@ -3,6 +3,7 @@
 @subpage c_dataHubIo <br>
 @subpage c_dataHubAdmin <br>
 @subpage c_dataHubQuery <br>
+@subpage c_periodicSensor <br>
 
 Copyright (C) Sierra Wireless Inc.
 
